SUN-87 Сделал у backdrop position fixed, и у modal изменил z-index

--- a/src/components/UI/Modal2/Modal.scss
+++ b/src/components/UI/Modal2/Modal.scss
@@ -3,6 +3,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 999;
 
   &__inner {
     background: white;
@@ -41,5 +42,5 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  position: absolute;
+  position: fixed;
 }
